# paper-archive

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: backfill.yml  monthly.yml  weekly.yml
config/: canon.yaml  profile.yaml
entrypoints/: _common.py  backfill.py  monthly.py  push_archive.py  retidy.py  retier.py  weekly.py
exports/: backfill_20260627.ris  retidy_20260628.ris  weekly_20260627.ris  weekly_20260629.ris
site/: data.json  index.html
site/weekly/: 2026-06-28.html  2026-06-29.html  index.html
src/paperarchive/: __init__.py  config.py  llm.py  pipeline.py  rank.py  record.py  state.py  summarize.py  tiers.py
src/paperarchive/outputs/: html_site.py  ris.py  telegram.py  zotero.py
src/paperarchive/sources/: base.py  openalex.py  semanticscholar.py
state/: seen.json
tests/: test_base.py  test_callnumbers.py  test_heuristic.py  test_openalex.py  test_outputs.py  test_rank_state.py  test_tiers.py  test_weekly.py
